log
Fri 21 Apr 2023 07:27:07 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:32: error: expected expression before ‘)’ token
   41 |   TreeMap *treeMap = (treeMap *) malloc(sizeof(treemap));
      |                                ^
Compilation failed
a902631
Fri 21 Apr 2023 07:28:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:33: error: expected expression before ‘)’ token
   41 |   TreeMap *treeMap = ((treeMap *) malloc(sizeof(treemap)));
      |                                 ^
Compilation failed
d3e7405
Fri 21 Apr 2023 07:28:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:47: error: ‘treemap’ undeclared (first use in this function); did you mean ‘treeMap’?
   41 |   TreeMap *treeMap = (treeMap * malloc(sizeof(treemap));
      |                                               ^~~~~~~
      |                                               treeMap
treemap.c:41:47: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:56: error: expected ‘)’ before ‘;’ token
   41 |   TreeMap *treeMap = (treeMap * malloc(sizeof(treemap));
      |                      ~                                 ^
      |                                                        )
treemap.c:48:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   48 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ef4902f
Fri 21 Apr 2023 07:28:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:32: error: expected expression before ‘)’ token
   41 |   TreeMap *treeMap = (treeMap *) malloc(sizeof(treemap));
      |                                ^
Compilation failed
7668cb2
Fri 21 Apr 2023 07:29:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
b82b9cc
